# python-containerized-microservice

./: .gitignore  Dockerfile  README.md  compose.yaml  logging.yaml  pyproject.toml  startup.sh
.github/workflows/: ci.yml
containerized_microservice/: app.py
containerized_microservice/api/: health.py  router.py
containerized_microservice/api/v1/: router.py  target.py
containerized_microservice/models/api/: input.py
containerized_microservice/service/: target.py
tests/api/v1/: test_target.py
tests/service/: test_target.py
